--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -929,6 +929,21 @@ dropdown can overlap all other components
   vertical-align: middle;
   line-height: 22px;
 }
+.edit-account-modal-component .category-container__content-container__toggle-switch-container {
+  float: left;
+}
+.edit-account-modal-component .category-container__content-container__sort-select {
+  float: left;
+  margin: 2px 20px 0 0;
+  outline: none;
+  border: 1px solid gray;
+  background: #e5e5e5;
+  width: 100px;
+  font-size: 13px;
+}
+.edit-account-modal-component .category-container__content-container__sort-select:focus {
+  border-color: #258faa;
+}
 
 .delete-modal-component .blurred-background {
   z-index: 2;
